feat: Add legacy-states-v0 Cargo feature for backward compatibility #1076 (#1135)
feat: Add legacy-states-v0 Cargo feature for backward compatibility

--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -35,6 +35,9 @@ jobs:
           uses: Swatinem/rust-cache@v2
           with:
             key: rust-${{ matrix.platform.runner }}-${{ matrix.python-version }}
+        - name: Rust tests (no default features)
+          run: cargo test --no-default-features --verbose
+
         - name: Rust tests
           run: cargo test --verbose
 
